Thu Jan 21 17:13:12 1999  Jeff Garzik  <jgarzik@pobox.com>

	* gtk/gtkselection.c:
	(gtk_selection_property_notify): Check args for NULL.
	(gtk_selection_default_handler):
	Replace manual list count with call to g_list_length.
	Remove signedness of temp var 'count' to agree with usage.
	Slight spacing adjustment for readability.

	* gtk/gtkbox.c, gtk/gtklayout.c, gtk/gtkselection.c:
	Init a few ptrs to NULL, to quiet warnings.

Thu Jan 21 16:03:02 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkbutton.c (gtk_button_expose): Code cleanup.

	* gtk/gtktreeitem.c: Add a paint routine, fix up bugs
	in drawing where if the expose area was contained
	completely in the right side of the tree the background
	wasn't redraw, etc.

	* gtk/gtkwidget.c (gtk_widget_clip_rect): Fix a bug
	in clipping draw regions while propagating them
	upwards.

Thu Jan 21 12:20:51 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcolorsel.c (gtk_color_selection_dialog_new): 
	Pushing	and popping the visual/cmap in the init() 
	function does no good, because the window itself needs
	to be create with that visual/cmap.

	So do it in the new() function instead. 

	This will require people doing gtk_widget_new() to do 
	the push/pop themselves, but I don't see any way around
	it other than digging in and tweaking the window
	widget's colormap and visual ourselves, which
	is highly non-kosher, but would be safe...

Thu Jan 21 16:04:35 1999  Timur Bakeyev <mc@bat.ru>

	* gtk/gtkrc.c (gtk_rc_init): It was reported by Owen Taylor 
	<otaylor@redhat.com>, that LC_ALL produce unparsable garbage
	on some glibc'ed systems and HP/UX. So, falling to LC_CTYPE.

Thu Jan 21 02:11:44 1999  Owen Taylor  <otaylor@redhat.com>

	* Set and read the XdndActionList property defined
	in the Xdnd spec. We do this always, not just for
	XdndActionAsk like the spec says, but if we don't
	find it, we fall back to actions = suggested_action,
	which is compatible with the language of the spec.
